--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ description: A flutter boilerplate project created using MobX and Provider.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-  
+  sdk: ">=3.0.6 <4.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
@@ -65,6 +65,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   flutter_svg: ^2.0.9
   emoji_picker_flutter: ^1.6.3
+  flutter_dotenv: ^5.1.0
   # Y
   # Z
 
@@ -86,13 +87,11 @@ flutter_icons:
   android: true
   ios: true
 
-
 # For information on the generic Dart art of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -100,9 +99,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/
-  - assets/icons/
-  - assets/lang/
+    - assets/images/
+    - assets/icons/
+    - assets/lang/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -116,13 +116,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: ProductSans
-    fonts:
-    - asset: assets/fonts/Product-Sans-Regular.ttf
-    - asset: assets/fonts/Product-Sans-Italic.ttf
-      style: italic
-    - asset: assets/fonts/Product-Sans-Bold.ttf
-      weight: 700
+    - family: ProductSans
+      fonts:
+        - asset: assets/fonts/Product-Sans-Regular.ttf
+        - asset: assets/fonts/Product-Sans-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Product-Sans-Bold.ttf
+          weight: 700
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
