--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="Boilerplate Project"
+        android:label="ChatGPT"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
