--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_svg: ^2.0.9
   emoji_picker_flutter: ^1.6.3
   flutter_dotenv: ^5.1.0
+  animated_text_kit: ^4.2.2
   # Y
   # Z
 
